--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
         "phaser": "^3.85.2",
         "react": "^18",
         "react-dom": "^18",
+        "react-icons": "^5.3.0",
         "webfontloader": "^1.6.28"
     },
     "devDependencies": {
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/react-icons": "^2.2.7",
         "@types/webfontloader": "^1.6.38",
         "autoprefixer": "^10.4.20",
         "postcss": "^8.4.47",
